--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,40 @@
-<h2>Best deals</h2>
+
+
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <h4>Best deals we have for you</h4>
+        </div>
+        <div class="col-2"></div>
+
+    </div>
+</div>
+
+
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <table class="table table-borderless table-dark">
+                <tr>
+                    <th>PRICE</th>
+                    <th>FOR</th>
+                    <th>QTY</th>
+                </tr>
+
+                {{#each bstDeals}}
+                <strong>
+                    <tr>
+                    <td> {{this.qty}}</td>
+                    <td>For Only </td>
+                   <td> {{this.price}}</td>
+                   </tr>
+                </strong>
+                {{/each}}
+            </table>
+        </div>
+    </div>
+</div>
