--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <table class="table table-borderless table-dark">
+            <table>
                 <tr>
                     <th>PRICE</th>
                     <th>FOR</th>
