--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@ body {
 .spacer{
 	height: 25px;
 }
-/* 
+
 table{
 	border-collapse: collapse;
 	margin-left: auto;
@@ -24,4 +24,4 @@ td, th {
 	border: 1px solid #999;
 	padding: 0.5rem;
 	text-align: left;
-	} */
+	}
