--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,11 +18,11 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <table>
+            <table class="table table-borderless table-dark">
                 <tr>
-                    <th>PRICE</th>
-                    <th>FOR</th>
                     <th>QTY</th>
+                    <th>FOR</th>
+                    <th>PRICE</th>
                 </tr>
 
                 {{#each bstDeals}}
