--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
 								<a class="nav-link" href="/allShops">ALL SHOPS</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="/add">ADD SHOP</a>
+								<a class="nav-link" href="/add">MAKE DEAL</a>
 							</li>
 
 							<li class="nav-item">
