--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,12 +13,12 @@
 </div>
 
 
-
+<div class="spacer"></div>
 
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <table class="table table-borderless table-dark">
+            <table class="table table-borderless table-light">
                 <tr>
                     <th>QTY</th>
                     <th>FOR</th>
@@ -28,9 +28,9 @@
                 {{#each bstDeals}}
                 <strong>
                     <tr>
-                    <td> {{this.qty}}</td>
+                    <td> {{qty}}</td>
                     <td>For Only </td>
-                   <td> {{this.price}}</td>
+                   <td> {{price}}</td>
                    </tr>
                 </strong>
                 {{/each}}
