--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,8 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-12">
+			<div class="col-1"></div>
+			<div class="col-10">
 				<nav class="navbar navbar-expand-lg navbar-light bg-light">
 					{{!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
 						data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -32,14 +33,14 @@
 								<a class="nav-link" href="/allShops">ALL SHOPS</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="/add">MAKE DEAL</a>
+								<a class="nav-link" href="/deals">MAKE DEAL</a>
 							</li>
 
 							<li class="nav-item">
 								<a class="nav-link" href="/bestShopDeal">BEST SHOP DEAL</a>
 							</li>
 
-						<li class="nav-item">
+							<li class="nav-item">
 								<a class="nav-link" href="/newShop">ADD NEW SHOP</a>
 							</li>
 						</ul>
@@ -48,6 +49,7 @@
 				</nav>
 
 			</div>
+			<div class="col-1"></div>
 		</div>
 	</div>
 
